--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - Flask=0.12.2
+  - Flask
   - scikit-learn
   - beautifulsoup4
   - pytorch
